src/objects/Teller_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Notes__c</fullName>
        <label>Additional Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_Type__c</fullName>
        <label>Amount Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approved_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approved User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Authenticated_Date_Time__c</fullName>
        <label>Authenticated Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Authenticated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authenticated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Account_No__c</fullName>
        <label>Beneficiary Account No</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Detail_Lines__c</fullName>
        <label>Beneficiary Detail Lines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Beneficiary_Sort_Code__c</fullName>
        <label>Beneficiary Sort Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <referenceTo>Branch__c</referenceTo>
        <relationshipLabel>Teller Transaction</relationshipLabel>
        <relationshipName>Teller_Transaction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Buy_Amount__c</fullName>
        <formula>Transaction_Amount__c*(-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buy_CCY__c</fullName>
        <formula>IF(
ISBLANK(Debit_Account_Currency__c),
Deposit_Currency__c, Debit_Account_Currency__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Buy CCY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cancellation_Teller_Depository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancellation Teller Depository</label>
        <referenceTo>Teller_Depository__c</referenceTo>
        <relationshipLabel>Teller Transaction</relationshipLabel>
        <relationshipName>Teller_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancelled By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Transaction1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancelled_Value__c</fullName>
        <label>Cancelled Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CashierID__c</fullName>
        <formula>CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sfOwnerId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charge_Amount__c</fullName>
        <label>Charge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charge_Code__c</fullName>
        <label>Charge Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Serial_No__c</fullName>
        <label>Cheque Serial No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Type__c</fullName>
        <label>Cheque Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_Value__c</fullName>
        <label>Cheque Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Credit_Account_Currency__c</fullName>
        <label>Credit Account Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Account_No__c</fullName>
        <label>Credit Account No</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credit_Account_with_IBB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Credit Account with IBB</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipLabel>Teller Transaction</relationshipLabel>
        <relationshipName>Teller_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Amount__c</fullName>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credit_System_Parameter__c</fullName>
        <label>Credit System Parameter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Account_Currency__c</fullName>
        <label>Debit Account Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Account_No__c</fullName>
        <label>Debit Account No</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Debit_Account_with_IBB__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Debit Account with IBB</label>
        <referenceTo>Account_with_IBB__c</referenceTo>
        <relationshipLabel>Teller Transaction (Debit Account with IBB)</relationshipLabel>
        <relationshipName>Teller_Transaction1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Debit_Amount__c</fullName>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Debit_System_Parameter__c</fullName>
        <label>Debit System Parameter</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Declined_Date__c</fullName>
        <label>Declined Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Declined_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Declined User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Teller_Transaction2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deposit_Currency__c</fullName>
        <label>Deposit Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EBS_ID__c</fullName>
        <formula>IF( Credit_Account_with_IBB__c = Null,   Debit_Account_with_IBB__r.Primary_Customer_EBS_ID__c  , Credit_Account_with_IBB__r.Primary_Customer_EBS_ID__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Customer EBS ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EUR__c</fullName>
        <formula>IF(Buy_CCY__c = &quot;EUR&quot;,(if(Teller_Function_Text__c = &apos;FX Cash Withdrawal&apos;,(Exchange_Amount__c),Transaction_Amount__c)),if(Sell_CCY__c = &quot;EUR&quot;,if(Teller_Function_Text__c = &apos;FX Cash Withdrawal&apos;,  (Buy_Amount__c),Sell_Amount__c),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EUR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <formula>IF( Debit_Account_with_IBB__c = null,Credit_Account_with_IBB__r.Primary_SFDC_Account__r.PersonEmail,Debit_Account_with_IBB__r.Primary_SFDC_Account__r.PersonEmail

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EmailAddress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Amount__c</fullName>
        <label>Exchange Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exchange_Rate__c</fullName>
        <label>Exchange Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>From_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Teller Transaction</relationshipLabel>
        <relationshipName>Teller_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Depository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Depository</label>
        <referenceTo>Teller_Depository__c</referenceTo>
        <relationshipLabel>Teller Transaction (From Depository)</relationshipLabel>
        <relationshipName>Teller_Transaction4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>From_Storage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Storage</label>
        <referenceTo>Teller_Depository__c</referenceTo>
        <relationshipLabel>Teller Transaction (From Storage)</relationshipLabel>
        <relationshipName>Teller_Transaction1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GBP__c</fullName>
        <formula>IF(Buy_CCY__c = &quot;GBP&quot;,(if(Teller_Function_Text__c = &apos;FX Cash Withdrawal&apos;,(Exchange_Amount__c),Transaction_Amount__c)),if(Sell_CCY__c = &quot;GBP&quot;,if(Teller_Function_Text__c = &apos;FX Cash Withdrawal&apos;,  (Buy_Amount__c),Sell_Amount__c),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GBP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issuing_Bank__c</fullName>
        <label>Issuing Bank</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobileNumber__c</fullName>
        <formula>IF( Debit_Account_with_IBB__c = null,Credit_Account_with_IBB__r.Primary_SFDC_Account__r.PersonContact.MobilePhone
,Credit_Account_with_IBB__r.Primary_SFDC_Account__r.PersonContact.MobilePhone

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MobileNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narrative_Lines__c</fullName>
        <label>Narrative Lines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Of_Cheques__c</fullName>
        <label>No Of Cheques</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Cheques__c</fullName>
        <label>Num Cheques</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opt_Out_of_Survey__c</fullName>
        <formula>Debit_Account_with_IBB__r.Primary_SFDC_Account__r.Opt_Out_of_Survey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opt Out of Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Detail_Lines__c</fullName>
        <label>Payment Detail Lines</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Purpose__c</fullName>
        <label>Payment Purpose</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Customer_Name__c</fullName>
        <formula>IF( Credit_Account_with_IBB__c = Null,    Debit_Account_with_IBB__r.Primary_SFDC_Account__r.Customer_Name__c  , Credit_Account_with_IBB__r.Primary_SFDC_Account__r.Customer_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Printed_HTML_Reciept__c</fullName>
        <label>Printed HTML Reciept</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QAR__c</fullName>
        <formula>IF(Buy_CCY__c = &quot;QAR&quot;,(if(Teller_Function_Text__c = &apos;FX Cash Withdrawal&apos;,(Exchange_Amount__c),Transaction_Amount__c)),if(Sell_CCY__c = &quot;QAR&quot;,if(Teller_Function_Text__c = &apos;FX Cash Withdrawal&apos;,  (Buy_Amount__c),Sell_Amount__c),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QAR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RelatedtoID__c</fullName>
        <formula>IF( Debit_Account_with_IBB__c = null,Credit_Account_with_IBB__r.Primary_SFDC_Account__c,Debit_Account_with_IBB__r.Primary_SFDC_Account__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>sfWhatId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remainder_Amount__c</fullName>
        <label>Remainder Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remainder_Currency__c</fullName>
        <label>Remainder Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remainder_Deposit_Amount__c</fullName>
        <label>Remainder Deposit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remainder_Exchange_Rate__c</fullName>
        <label>Remainder Exchange Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Response_Reference__c</fullName>
        <label>Response Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reverse_Exchange_Rate__c</fullName>
        <label>Reverse Exchange Rate</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_Amount__c</fullName>
        <formula>Exchange_Amount__c  * (-1)</formula>
        <label>Sell Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sell_CCY__c</fullName>
        <formula>IF( 
ISBLANK(Credit_Account_Currency__c), 
Withdrawal_Currency__c, Credit_Account_Currency__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sell CCY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <formula>Debit_Account_with_IBB__r.Primary_SFDC_Account__r.Survey_Sent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TelephoneNumber__c</fullName>
        <formula>IF( Debit_Account_with_IBB__c = null,Credit_Account_with_IBB__r.Primary_SFDC_Account__r.PersonMobilePhone

,

Debit_Account_with_IBB__r.Primary_SFDC_Account__r.PersonMobilePhone

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TelephoneNumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teller_Depository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teller Depository</label>
        <referenceTo>Teller_Depository__c</referenceTo>
        <relationshipLabel>Teller Transaction (Teller Depository)</relationshipLabel>
        <relationshipName>Teller_Transaction2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teller_Function_Text__c</fullName>
        <formula>Teller_Function__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Teller Function Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teller_Function__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teller Function</label>
        <referenceTo>Teller_Function__c</referenceTo>
        <relationshipLabel>Teller Transaction</relationshipLabel>
        <relationshipName>Teller_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Teller_Transfer_Currency__c</fullName>
        <label>Teller Transfer Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teller_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Teller User</label>
        <referenceTo>Teller_User__c</referenceTo>
        <relationshipLabel>Teller Transaction</relationshipLabel>
        <relationshipName>Teller_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template_Id__c</fullName>
        <label>Template Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_taken_for_transaction_minutes__c</fullName>
        <formula>ROUND(MOD((LastModifiedDate - CreatedDate)*1440,60),0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time taken for transaction (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_Depository__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Depository</label>
        <referenceTo>Teller_Depository__c</referenceTo>
        <relationshipLabel>Teller Transaction (To Depository)</relationshipLabel>
        <relationshipName>Teller_Transaction5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Storage__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Storage</label>
        <referenceTo>Teller_Depository__c</referenceTo>
        <relationshipLabel>Teller Transaction (To Storage)</relationshipLabel>
        <relationshipName>Teller_Transaction3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Adding_to_Depository__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Adding to Depository</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Transaction Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Currency__c</fullName>
        <label>Transaction Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Notes__c</fullName>
        <label>Transaction Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Reference__c</fullName>
        <label>Transaction Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Status_Description__c</fullName>
        <label>Transaction Status Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Status__c</fullName>
        <label>Transaction Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Authorised</fullName>
                </value>
                <value>
                    <fullName>Submitted for Authorisation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TransferType__c</fullName>
        <label>TransferType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash Withdraw</fullName>
                </value>
                <value>
                    <fullName>Cash Deposit</fullName>
                </value>
                <value>
                    <fullName>Cheque Withdraw</fullName>
                </value>
                <value>
                    <fullName>Cheque Deposit</fullName>
                </value>
                <value>
                    <fullName>Storage Transfer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transfer_Due_Date__c</fullName>
        <label>Transfer Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transfer_Status__c</fullName>
        <label>Transfer Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Recieved</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Authenticated</fullName>
                </value>
                <value>
                    <fullName>Not Authenticated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>USD__c</fullName>
        <formula>IF(Buy_CCY__c = &quot;USD&quot;,(if(Teller_Function_Text__c = &apos;FX Cash Withdrawal&apos;,(Exchange_Amount__c),Transaction_Amount__c)),if(Sell_CCY__c = &quot;USD&quot;,if(Teller_Function_Text__c = &apos;FX Cash Withdrawal&apos;,  (Buy_Amount__c),Sell_Amount__c),0))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Withdrawal_Currency__c</fullName>
        <label>Withdrawal Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Teller Transaction</label>
    <nameField>
        <displayFormat>MT-{00000000}</displayFormat>
        <label>Teller Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Teller Transaction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>